--- a/nuevaVersion/portfolioFrontend/package.json
+++ b/nuevaVersion/portfolioFrontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "i18next": "^25.3.6",
     "ityped": "^1.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11"
